<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".AdressSelectionAcitivty">



    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_weight="1"
            android:id="@+id/etStreetNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:ems="10"
            android:text=""
            android:hint="@string/streetNO"
            android:inputType="textPersonName"
            />


        <EditText
            android:text=""
            android:layout_weight="1"
            android:id="@+id/etStreetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:ems="10"
            android:hint="@string/streetName"
            android:inputType="textPersonName"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <EditText
            android:text=""
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName" />

        <EditText
            android:text=""
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <EditText
            android:text=""
            android:id="@+id/etZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/zipCode"
            android:inputType="textPersonName" />

        <EditText
            android:text=""
            android:id="@+id/etTell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/tellePhone"
            android:inputType="textPersonName" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"/>

    <fragment
        android:layout_weight="1"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>