<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/setup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_add"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_setup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/setup"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/startbutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_checkout"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_checkout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/check_out_tool_mobile_asset"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/stopjob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_checkin"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_checkin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/check_in_tool_mobile_asset"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/reportjob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_reports"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_reports" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/reports"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/editjob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_edit"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exportjob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_export"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_export" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/export"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/gps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_gps"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_gps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/gps_lcator"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDownloads"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/item_corner_radius"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageButton
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:background="@drawable/round_gps"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_file" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:text="@string/images_documents"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/icon_text" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
